Removed targetDestination vector  from the AIPlayer's blueprint.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,9 +27,7 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNetDedicated=True
-PlayNumberOfClients=2
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -49,7 +47,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/VoidMap
+LastLevel=/Game/Level/maps/TestMap
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.05-22.25.20
@@ -4149,13 +4147,15 @@ BTTask_RunEQSQuery.Blackboard=True
 BTTask_RunEQSQuery.EQS=True
 BTTask_RunEQSQuery.Task=True
 BTTask_RunEQSQuery.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
-OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4188,7 +4188,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AdvancedAI
+ContentBrowserTab1.SelectedPaths=/Game/Level/maps
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4239,8 +4239,8 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/VoidMap
-MRUItem1=/Game/Level/maps/TestMap
+MRUItem0=/Game/Level/maps/TestMap
+MRUItem1=/Game/Level/maps/VoidMap
 MRUItem2=/Game/Level/maps/Wimbledon
 MRUItem3=/Game/Level/maps/Blockout_P
 MRUItem4=/Game/maps/VoidMap
@@ -4343,7 +4343,7 @@ BP_AIPlayer_C=BP_AIPlayer_C.Collision.Collision,BP_AIPlayer_C.PostProcess.Lens,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.AI.AI|BehaviorTree\" "
+Object="\"Object.Blackboard\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4389,7 +4389,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4467,7 +4467,7 @@ EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSl
 EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
-EnvQueryNode=
+EnvQueryNode="\"Object.Generator.ProjectionData\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -4497,14 +4497,14 @@ EnvQueryTest=
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
-BTTask_BlackboardBase="\"Object.EQS.EQSRequest\" "
-BTTaskNode="\"Object.EQS.EQSRequest\" "
-BTNode="\"Object.EQS.EQSRequest\" "
+BTTask_BlackboardBase=
+BTTaskNode=
+BTNode=
 
 [PlacementMode]
+RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
-RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AdvancedAI/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation;
@@ -4524,18 +4524,18 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BT_AIPlayer
-MRUItem1=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem2=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem3=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem4=/Game/AdvancedAI/EQS_Trash
-MRUItem5=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem6=/Game/Level/maps/VoidMap
-MRUItem7=/Game/Level/maps/TestMap
-MRUItem8=/Game/AdvancedAI/BP_AIPlayer
-MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem10=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem11=/Game/AdvancedAI/BB_AIPlayer
+MRUItem0=/Game/AdvancedAI/BP_AIPlayer
+MRUItem1=/Game/AdvancedAI/BB_AIPlayer
+MRUItem2=/Game/Level/maps/TestMap
+MRUItem3=/Game/AdvancedAI/BT_AIPlayer
+MRUItem4=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem5=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem7=/Game/AdvancedAI/EQS_Trash
+MRUItem8=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem9=/Game/Level/maps/VoidMap
+MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem11=/Game/AdvancedAI/EQS_CoverFindign
 MRUItem12=/Game/AdvancedAI/BP_AI
 MRUItem13=/Game/Blueprints/Animations/BP_CharacterAnimation
 MRUItem14=/Game/Level/maps/Wimbledon
