Created a new blackboard decorator, added it to the behavior tree to check distance to an actor.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,7 +27,6 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -47,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/TestMap
+LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.05-22.25.20
@@ -4150,12 +4149,24 @@ BTTask_RunEQSQuery.Description=True
 BTTask_Wait.Wait=True
 BTTask_Wait.Task=True
 BTTask_Wait.Description=True
+EnvQueryGenerator_Composite.Generator=True
+EnvQueryGenerator_Composite.Option=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BehaviorTreeGraphNode_CompositeDecorator.Description=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+Decorator_DistanceTo_C.FlowControl=True
+Decorator_DistanceTo_C.Description=True
+Decorator_DistanceTo_C.Condition=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4239,8 +4250,8 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/TestMap
-MRUItem1=/Game/Level/maps/VoidMap
+MRUItem0=/Game/Level/maps/VoidMap
+MRUItem1=/Game/Level/maps/TestMap
 MRUItem2=/Game/Level/maps/Wimbledon
 MRUItem3=/Game/Level/maps/Blockout_P
 MRUItem4=/Game/maps/VoidMap
@@ -4357,7 +4368,7 @@ REINST_BP_PlayerPawn_C_30="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_25="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_29="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -4466,8 +4477,8 @@ BP_EQSTestingPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.Walka
 EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
-EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
-EnvQueryNode="\"Object.Generator.ProjectionData\" "
+EnvQueryGenerator=
+EnvQueryNode="\"Object.Trace.TraceData\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -4490,10 +4501,10 @@ BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
-BlackboardData="\"Object.Blackboard\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
-EnvQueryTest=
+EnvQueryTest="\"Object.Trace.TraceData\" "
 REINST_BP_PlayerPawn_C_227="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_231="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BTTask_RunEQSQuery="\"Object.EQS.EQSRequest\" "
@@ -4524,26 +4535,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BP_AIPlayer
-MRUItem1=/Game/AdvancedAI/BB_AIPlayer
-MRUItem2=/Game/Level/maps/TestMap
-MRUItem3=/Game/AdvancedAI/BT_AIPlayer
-MRUItem4=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem5=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem7=/Game/AdvancedAI/EQS_Trash
-MRUItem8=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem9=/Game/Level/maps/VoidMap
-MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem11=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem12=/Game/AdvancedAI/BP_AI
-MRUItem13=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem14=/Game/Level/maps/Wimbledon
-MRUItem15=/Game/Level/maps/Blockout_P
-MRUItem16=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem17=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem18=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem19=/Game/Weapons/SK_Rifle
+MRUItem0=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem1=/Game/AdvancedAI/BT_AIPlayer
+MRUItem2=/Game/Level/maps/VoidMap
+MRUItem3=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem4=/Game/AdvancedAI/BP_AIPlayer
+MRUItem5=/Game/AdvancedAI/BB_AIPlayer
+MRUItem6=/Game/Level/maps/TestMap
+MRUItem7=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem8=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem9=/Game/AdvancedAI/EQS_Trash
+MRUItem10=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem11=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem12=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem13=/Game/AdvancedAI/BP_AI
+MRUItem14=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem15=/Game/Level/maps/Wimbledon
+MRUItem16=/Game/Level/maps/Blockout_P
+MRUItem17=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem19=/Game/Weapons/SK_Rifle_Skeleton
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
