Created a environment query context to find a target.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4170,6 +4170,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
+OpenAssetsAtExit=/Game/AdvancedAI/Decorator_DistanceTo.Decorator_DistanceTo
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4358,7 +4359,7 @@ Decorator_DistanceTo_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4539,26 +4540,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem1=/Game/AdvancedAI/BT_AIPlayer
-MRUItem2=/Game/Level/maps/VoidMap
-MRUItem3=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem4=/Game/AdvancedAI/BP_AIPlayer
-MRUItem5=/Game/AdvancedAI/BB_AIPlayer
-MRUItem6=/Game/Level/maps/TestMap
-MRUItem7=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem8=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem9=/Game/AdvancedAI/EQS_Trash
-MRUItem10=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem11=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem12=/Game/AdvancedAI/EQS_CoverFindign
-MRUItem13=/Game/AdvancedAI/BP_AI
-MRUItem14=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem15=/Game/Level/maps/Wimbledon
-MRUItem16=/Game/Level/maps/Blockout_P
-MRUItem17=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem19=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem0=/Game/AdvancedAI/EQS_FindTarget
+MRUItem1=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem2=/Game/AdvancedAI/BT_AIPlayer
+MRUItem3=/Game/Level/maps/VoidMap
+MRUItem4=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem5=/Game/AdvancedAI/BP_AIPlayer
+MRUItem6=/Game/AdvancedAI/BB_AIPlayer
+MRUItem7=/Game/Level/maps/TestMap
+MRUItem8=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem9=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem10=/Game/AdvancedAI/EQS_Trash
+MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem13=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem14=/Game/AdvancedAI/BP_AI
+MRUItem15=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem16=/Game/Level/maps/Wimbledon
+MRUItem17=/Game/Level/maps/Blockout_P
+MRUItem18=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem19=/Game/Blueprints/GameModes/BP_TestGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
